--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>ARIF FAZIL | Sovereign Architect of arifOS</title>
     <meta name="title" content="ARIF FAZIL | Sovereign Architect of arifOS" />
     <meta name="description" content="Sovereign Architect of the arifOS kernel. Building constitutionally-bound AI systems that reason (AGI), empathize (ASI), and adjudicate (APEX). Ditempa Bukan Diberi — Forged, Not Given." />
-    <meta name="keywords" content="Muhammad Arif bin Fazil, arifOS, AI governance, constitutional AI, Trinity architecture, AI safety, sovereign AI" />
+    <meta name="keywords" content="ARIF FAZIL, arifOS, AI governance, constitutional AI, Trinity architecture, AI safety, sovereign AI" />
     <meta name="author" content="ARIF FAZIL" />
     <meta name="robots" content="index, follow" />
     
@@ -27,7 +27,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://arif-fazil.com" />
-    <meta property="twitter:title" content="Muhammad Arif bin Fazil | Sovereign Architect of arifOS" />
+    <meta property="twitter:title" content="ARIF FAZIL | Sovereign Architect of arifOS" />
     <meta property="twitter:description" content="Sovereign Architect of the arifOS kernel. Building constitutionally-bound AI systems." />
     <meta property="twitter:image" content="https://arif-fazil.com/images/arifos-logo.webp" />
     
@@ -59,7 +59,7 @@
     {
       "@context": "https://schema.org",
       "@type": "Person",
-      "name": "Muhammad Arif bin Fazil",
+      "name": "ARIF FAZIL",
       "alternateName": "Arif Fazil",
       "url": "https://arif-fazil.com",
       "jobTitle": "Sovereign Architect",
@@ -91,10 +91,10 @@
       "@type": "WebSite",
       "name": "Arif Fazil — Sovereign Architect",
       "url": "https://arif-fazil.com",
-      "description": "Personal portfolio of Muhammad Arif bin Fazil, Sovereign Architect of the arifOS kernel.",
+      "description": "Personal portfolio of ARIF FAZIL, Sovereign Architect of the arifOS kernel.",
       "publisher": {
         "@type": "Person",
-        "name": "Muhammad Arif bin Fazil"
+        "name": "ARIF FAZIL"
       },
       "inLanguage": "en",
       "datePublished": "2026-02-02",
